# Tensor-compiler

./: .gitignore  CMakeLists.txt  README.md  output.dot
Frontend/: CMakeLists.txt  generate_nodes.rb  generator_lib.rb  main.cpp  ops_def.json
Frontend/Graph/: convertion.cpp  graph.hpp  graph_gen.hpp  graph_gen_parser.inl  graph_gen_utils.inl  graph_utils.cpp  load_from_proto.cpp
Frontend/onnx_proto/onnx/: onnx-data.pb.cc  onnx-data.pb.h  onnx-ml.pb.cc  onnx-ml.pb.h  onnx-operators.pb.cc  onnx-operators.pb.h  onnx.pb.cc  onnx.pb.h
data/: basic_onnx_gen.py  output.dot  test_model.onnx
python_onnx_gen/: README.md  basic1.py  basic2.py
